@@ -18,3 +18,6 @@ Translations :
 Patchs by :
     Ilya Chernikov (Mac OS Bug)
     hometoast (Windows Bug)
+
+Misc :
+    Use the program hstart.exe by Alexander Avdonin (http://www.ntwind.com/software/utilities/hstart.html)
